--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2147483648</title>
+  <title>TheReal58</title>
 
   <link href="style/tiles.css" rel="stylesheet" type="text/css">
   <link href="style/main.css" rel="stylesheet" type="text/css">
@@ -17,13 +17,13 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">2147483648</h1>
+      <h1 class="title">TheReal58 World</h1>
       <div class="scores-container">
         <div class="score-container" id="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro" id="game-intro">Join the numbers and get to the <strong>2147483648 tile!</strong></p>
+    <p class="game-intro" id="game-intro">Join the numbers and get to the <strong>highest tile</strong> you can get!</p>
 
     <div class="game-container">
       <div class="game-message">
@@ -45,11 +45,13 @@
       Time rush: <br>
       <button name="time_rush" type="button" onclick="timeRush(60);">60s Time Rush</button>
       <button name="time_rush" type="button" onclick="timeRush(300);">300s Time Rush</button>
+      <button name="time_rush" type="button" onclick="timeRush(1500);">1500s Time Rush</button>
     </p>
     <hr>
     <p>
-      My GitHub: <a href="https://github.com/TheAstronomer/">TheAstronomer</a> <br>
-      Creator's GitHub: <a href="https://github.com/CyberZHG/">CyberZHG</a> <br>
+      My GitHub: <a href="https://github.com/TheReal58/">TheReal58</a> <br>
+      Creator's GitHub: <a href="https://github.com/TheAstronomer/">TheAstronomer</a> <br>
+      Co-Creator's GitHub: <a href="https://github.com/CyberZHG/">CyberZHG</a> <br>
       Contributors to original 2147483648 site: <a href="https://github.com/jiangtyd/">jiangtyd</a>|
       <a href="https://github.com/allbinbin/">allbinbin</a>
     </p>
@@ -75,7 +77,7 @@
       <button type="button" onclick="changeMode('normal');">Normal</button>
       <button type="button" onclick="changeMode('alwaysTwo');">Always 1</button>
       <button type="button" onclick="changeMode('fibonacci');">Fibonacci</button>
-      <button type="button" onclick="changeMode('threes');">Threes!</button>
+      <button type="button" onclick="changeMode('threes');">Threes</button>
       <button type="button" onclick="changeMode('mergeAny');">Merge Any</button>
       <button type="button" onclick="changeMode('powerTwo');">Power 2</button>
       <button type="button" onclick="changeMode('tileZero');">Tile 0</button>
@@ -119,61 +121,62 @@
       <button type="button" onclick="window.location.href='fibonacci-5x5.html';">75025</button>
       <button type="button" onclick="window.location.href='fibonacci-6x6.html';">5702887</button>
       <button type="button" onclick="window.location.href='fibonacci-8x8.html';">139583862445</button>
-      <button type="button" onclick="window.location.href='fibonacci-16x16.html';">8944394323791464</button>
+      <button type="button" onclick="window.location.href='fibonacci-16x16.html';">12200160415121876738</button>
       <button type="button" onclick="window.location.href='threes-3x3.html';">384</button>
       <button type="button" onclick="window.location.href='threes.html';">3072</button>
       <button type="button" onclick="window.location.href='threes-5x5.html';">98304</button>
       <button type="button" onclick="window.location.href='threes-6x6.html';">6291456</button>
-      <button type="button" onclick="window.location.href='threes-8x8.html';">402653184</button>
-      <button type="button" onclick="window.location.href='threes-16x16.html';">1610612736</button>
+      <button type="button" onclick="window.location.href='threes-8x8.html';">103079215104</button>
+      <button type="button" onclick="window.location.href='threes-16x16.html';">13835058055282164000</button>
       <button type="button" onclick="window.location.href='power3-3x3.html';">243</button>
       <button type="button" onclick="window.location.href='power3.html';">2187</button>
       <button type="button" onclick="window.location.href='power3-5x5.html';">59049</button>
       <button type="button" onclick="window.location.href='power3-6x6.html';">4782969</button>
       <button type="button" onclick="window.location.href='power3-8x8.html';">282429536481</button>
-      <button type="button" onclick="window.location.href='power3-16x16.html';">5559060566555523</button>
+      <button type="button" onclick="window.location.href='power3-16x16.html';">109418989131512350000</button>
       <button type="button" onclick="window.location.href='negative-3x3.html';">-256</button>
       <button type="button" onclick="window.location.href='negative.html';">-2048</button>
       <button type="button" onclick="window.location.href='negative-5x5.html';">-65536</button>
       <button type="button" onclick="window.location.href='negative-6x6.html';">-4194304</button>
       <button type="button" onclick="window.location.href='negative-8x8.html';">-137438953472</button>
       <button type="button" onclick="window.location.href='negative-16x16.html';">-18446744073709551616</button>
-      <button type="button" onclick="window.location.href='diagonal-3x3.html';">Diagonal 3×3</button>
-      <button type="button" onclick="window.location.href='diagonal.html';">Diagonal</button>
-      <button type="button" onclick="window.location.href='diagonal-5x5.html';">Diagonal 5×5</button>
-      <button type="button" onclick="window.location.href='diagonal-6x6.html';">Diagonal 6×6</button>
-      <button type="button" onclick="window.location.href='diagonal-8x8.html';">Diagonal 8×8</button>      
+      <button type="button" onclick="window.location.href='diagonal-3x3.html';">Diagonal 256</button>
+      <button type="button" onclick="window.location.href='diagonal.html';">Diagonal 2048</button>
+      <button type="button" onclick="window.location.href='diagonal-5x5.html';">Diagonal 65536</button>
+      <button type="button" onclick="window.location.href='diagonal-6x6.html';">Diagonal 4194304</button>
+      <button type="button" onclick="window.location.href='diagonal-8x8.html';">Diagonal 137438953472</button>      
       <button type="button" onclick="window.location.href='to-n-3x3.html';">To 256</button>
       <button type="button" onclick="window.location.href='to-n.html';">To 2048</button>
       <button type="button" onclick="window.location.href='to-n-5x5.html';">To 65536</button>
       <button type="button" onclick="window.location.href='to-n-6x6.html';">To 4194304</button>
       <button type="button" onclick="window.location.href='to-n-8x8.html';">To 137438953472</button>
-      <button type="button" onclick="window.location.href='finals-3x3.html';">Finals 3×3</button>
-      <button type="button" onclick="window.location.href='finals.html';">Finals</button>
-      <button type="button" onclick="window.location.href='finals-5x5.html';">Finals 5×5</button>
-      <button type="button" onclick="window.location.href='finals-6x6.html';">Finals 6×6</button>
-      <button type="button" onclick="window.location.href='finals-8x8.html';">Finals 8×8</button>
+      <button type="button" onclick="window.location.href='finals-3x3.html';">Finals 256</button>
+      <button type="button" onclick="window.location.href='finals.html';">Finals 2048</button>
+      <button type="button" onclick="window.location.href='finals-5x5.html';">Finals 65536</button>
+      <button type="button" onclick="window.location.href='finals-6x6.html';">Finals 4194304</button>
+      <button type="button" onclick="window.location.href='finals-8x8.html';">Finals 137438953472</button>
       <button type="button" onclick="window.location.href='reverse-3x3.html';">1 3×3</button>
       <button type="button" onclick="window.location.href='reverse.html';">1</button>
       <button type="button" onclick="window.location.href='reverse-5x5.html';">1 5×5</button>
       <button type="button" onclick="window.location.href='reverse-6x6.html';">1 6×6</button>
       <button type="button" onclick="window.location.href='reverse-8x8.html';">1 8×8</button>
-      <button type="button" onclick="window.location.href='zen-3x3.html';">Zen 3×3</button>
-      <button type="button" onclick="window.location.href='zen.html';">Zen</button>      
-      <button type="button" onclick="window.location.href='zen-5x5.html';">Zen 5×5</button>
-      <button type="button" onclick="window.location.href='zen-6x6.html';">Zen 6×6</button>
-      <button type="button" onclick="window.location.href='zen-6x6.html';">Zen 8×8</button>
+      <button type="button" onclick="window.location.href='zen-3x3.html';">Zen 256</button>
+      <button type="button" onclick="window.location.href='zen.html';">Zen 2048</button>      
+      <button type="button" onclick="window.location.href='zen-5x5.html';">Zen 65536</button>
+      <button type="button" onclick="window.location.href='zen-6x6.html';">Zen 4194304</button>
+      <button type="button" onclick="window.location.href='zen-6x6.html';">Zen 137438953472</button>
       <button type="button" onclick="window.location.href='dontmake256.html';">Don't make 256</button>
       <button type="button" onclick="window.location.href='dontmake2048.html';">Don't make 2048</button>
       <button type="button" onclick="window.location.href='dontmake65536.html';">Don't make 65536</button>
       <button type="button" onclick="window.location.href='dontmake4194304.html';">Don't make 4194304</button>
       <button type="button" onclick="window.location.href='dontmake137438953472.html';">Don't make 137438953472</button>
+      <button type="button" onclick="window.location.href='size2x3.html';">2048 2x3</button>
       <button type="button" onclick="window.location.href='puzzle.html';">Puzzle</button>
       <button type="button" onclick="window.location.href='ai.html';">AI</button>
       <button type="button" onclick="window.location.href='144.html';">144</button>
-      <button type="button" onclick="window.location.href='hex.html';">16384 Hex</button>
-      <button type="button" onclick="window.location.href='hex-2.html';">2048 Hex</button>
+      <button type="button" onclick="window.location.href='hex.html';">2048 Hex</button>
       <button type="button" onclick="window.location.href='hex-2.html';">2048 Hex 2</button>
+      <button type="button" onclick="window.location.href='hex-2.html';">2048 Hex 3</button>
       <button type="button" onclick="window.location.href='cross1.html';">Cross 2048</button>
       <button type="button" onclick="window.location.href='cross2.html';">Cross 2048 2</button>
       <button type="button" onclick="window.location.href='double.html';">Double 2048</button>
@@ -181,7 +184,7 @@
       <button type="button" onclick="window.location.href='cube.html';">3D</button>
       <button type="button" onclick="window.location.href='tesseract.html';">4D</button>
       <button type="button" onclick="window.location.href='hypercube.html';">5D</button>
-      <button type="button" onclick="window.location.href='mode_negative.html';">Zero Sum 2048</button>
+      <button type="button" onclick="window.location.href='mode_negative.html';">Negative 2048</button>
       <button type="button" onclick="window.location.href='delirium.html';">2K48</button>      
       <button type="button" onclick="window.location.href='dive.html';">DIVE</button>
       <button type="button" onclick="window.location.href='animated2048.html';">Animated 2048</button>   
@@ -206,7 +209,7 @@
       <button type="button" onclick="window.location.href='8944394323791464.html';">8944394323791464</button>
       <button type="button" onclick="window.location.href='5559060566555523.html';">5559060566555523</button>
       <button type="button" onclick="window.location.href='±9007199254740992.html';">±9007199254740992</button>
-      <button type="button" onclick="window.location.href='1610612736.html';">1610612736</button>
+      <button type="button" onclick="window.location.href='6755399441055744.html';">6755399441055744</button>
     <hr>
     <p>
       Check out other 2048 variants here:
@@ -217,11 +220,11 @@
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> This site is <strong>NOT</strong> the official version of 2048. You can play it on your phone via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+    <strong class="important">Note:</strong> This site is <strong>NOT</strong> the official version of 2147483648. You can play it on your phone via <a href="http://theastronomer.github.io/2147483648">http://git.io/2147483648.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
     </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href="http://thereal58.github.io/" target="_blank"TheReal58.</a> Based on <a href="http://git.io/2048" target="_blank">2048 by Gabriele Cirulli</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
     <hr>
     <p>
