--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>2147483648</title>
+  <title>TheReal58</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -16,13 +16,13 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">2147483648</h1>
+      <h1 class="title">TheReal58</h1>
       <div class="scores-container">
         <div class="score-container" id="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
-    <p class="game-intro" id="game-intro">Join the numbers and get to the <strong>2147483648 tile!</strong></p>
+    <p class="game-intro" id="game-intro">TheReal58!</p>
 
     <div class="game-container">
       <div class="game-message">
@@ -73,12 +73,15 @@
       <button type="button" onclick="changeMode('normal');">Normal</button>
       <button type="button" onclick="changeMode('alwaysTwo');">Always 2</button>
       <button type="button" onclick="changeMode('fibonacci');">Fibonacci</button>
-      <button type="button" onclick="changeMode('threes');">Threes!</button>
-      <button type="button" onclick="changeMode('mergeAny');">Merge Any</button>
+      <button type="button" onclick="changeMode('lucas');">Lucas</button>
+      <button type="button" onclick="changeMode('threes');">Threes</button>
+      <button type="button" onclick="changeMode('powerThree');">Power 3</button>
       <button type="button" onclick="changeMode('powerTwo');">Power 2</button>
+      <button type="button" onclick="changeMode('mergeAny');">Merge Any</button>
       <button type="button" onclick="changeMode('tileZero');">Tile 0</button>
       <button type="button" onclick="changeMode('tileNegative');">Negative</button>
       <button type="button" onclick="changeMode('gravity');">Gravity</button>
+      <button type="button" onclick="changeMode('troll');">Troll</button>
       <button type="button" onclick="window.location.href='auto_flappy.html';">Auto Flappy</button>
     </p>
     <hr>
@@ -109,7 +112,7 @@
     </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a> Modified by <a href="https://raw.githack.com/TheReal58/thereal58.github.io/gh-pages/index.html">TheReal58.</a>
     </p>
     <hr>
   </div>
