--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       Time rush: <br>
       <button name="time_rush" type="button" onclick="timeRush(60);">60s Time Rush</button>
       <button name="time_rush" type="button" onclick="timeRush(300);">300s Time Rush</button>
+      <button name="time_rush" type="button" onclick="timeRush(1500);">1500s Time Rush</button>
     </p>
     <hr>
     <p>
@@ -75,7 +76,7 @@
       <button type="button" onclick="changeMode('fibonacci');">Fibonacci</button>
       <button type="button" onclick="changeMode('lucas');">Lucas</button>
       <button type="button" onclick="changeMode('threes');">Threes</button>
-      <button type="button" onclick="changeMode('powerThree');">Power 3</button>
+      <button type="button" onclick="changeMode('baseThree');">Base 3</button>
       <button type="button" onclick="changeMode('powerTwo');">Power 2</button>
       <button type="button" onclick="changeMode('mergeAny');">Merge Any</button>
       <button type="button" onclick="changeMode('tileZero');">Tile 0</button>
