--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         <div class="best-container">0</div>
       </div>
     </div>
+    <div class="above-game">
     <p class="game-intro" id="game-intro">TheReal58!</p>
-
+    <a class="retry-button">Try again</a>
+    </div>
+    
     <div class="game-container">
       <div class="game-message">
         <p></p>
