--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     </div>
     <div class="above-game">
     <p class="game-intro" id="game-intro">TheReal58!</p>
-    <a class="retry-button">Try again</a>
+    <a class="restart-button">Play again</a>
     </div>
     
     <div class="game-container">
       <div class="game-message">
         <p></p>
         <div class="lower">
-          <a class="retry-button">Try again</a>
+          <a class="retry-button">Play again</a>
         </div>
       </div>
 
